Correct positioning of footer

--- a/frontend/src/styles/footer.scss
+++ b/frontend/src/styles/footer.scss
@@ -14,7 +14,7 @@ footer {
 .custom-footer {
   background-color: $footer-bg-color;
   color: $footer-text-color;
-  position: absolute;
+  position: fixed;
     bottom: 0;
     left: 0;
     right: 0;
