--- a/frontend/src/styles/footer.scss
+++ b/frontend/src/styles/footer.scss
@@ -7,6 +7,7 @@ $footer-link-hover-color: lighten($footer-link-color, 40%);
 footer {
   max-height: 15rem;
   padding-bottom: 1rem;
+  font-weight: bold;
   overflow: hidden;
 }
 
