--- a/frontend/src/styles/userDashboard.scss
+++ b/frontend/src/styles/userDashboard.scss
@@ -1,9 +1,23 @@
+.file-upload-section{
+    border-radius: 5px;
+    padding: 1rem;
+    
+    button{
+        margin-left: 0.5rem;
+    }
+}
+
 .file-item {
     margin-bottom: 1.5rem;
     padding: 1rem;
     border: 1px solid #ddd;
     border-radius: 5px;
     background-color: #f9f9f9;
+
+    button {
+        margin-top: 0.5rem;
+        margin-left: 0.35rem;
+    }
 
     .version-list {
         margin-top: 0.5rem;
@@ -12,8 +26,9 @@
         .version-item {
             margin-top: 0.5rem;
             padding: 0.5rem;
-            background-color: #e6e6e6;
-            border-radius: 3px;
+            background-color: #000;
+            color: #fff;
+            border-radius: 0.5rem;
 
             p {
                 margin: 0;
@@ -21,3 +36,8 @@
         }
     }
 }
+
+.custom-modal .custom-modal-content .modal-body canvas {
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
+  }
+  
