--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -58,25 +58,6 @@ h6 {
   overflow-wrap: break-word;
   margin: 0;
   color: inherit;
-
-  p {
-    text-wrap: pretty;
-  }
-
-  h1,
-  h2,
-  h3,
-  h4,
-  h5,
-  h6 {
-    text-wrap: balance;
-  }
-}
-
-// Root containers for app isolation
-#root,
-#__next {
-  isolation: isolate;
 }
 
 $main-bg-color: #ae8efd;
@@ -96,19 +77,62 @@ $sidebar-width: 300px;
   }
 }
 
+// Keyframe for scrolling background animation
+@keyframes scrollToRight {
+  0% {
+    background-position: 0 0;
+  }
+  100% {
+    background-position: 100vw 0;
+  }
+}
+
 // Main app layout adjustments
 .App {
   display: flex;
-  flex-direction: row;
-  height: 100%; 
+  flex-direction: column;
+  min-height: 100vh; 
   position: relative;
+
+  // Background Animation
+  .background-animation {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: calc(100vh - 64px); // Height up to just above the footer
+    z-index: -1; // Place it behind everything else
+    background-repeat: repeat-y;
+    background-size: auto 100vh; // Fit the SVG vertically across the full viewport height
+    animation: scrollToRight 8s linear infinite;
+    opacity: 0.5; // Adjust opacity if needed
+
+    // Gradient Overlay
+    &::after {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: linear-gradient(
+        to bottom,
+        rgba(192, 192, 192, 0.7), /* Silver-grey at the top */
+        rgba(255, 255, 255, 0.3), /* Near-white in the middle */
+        rgba(192, 192, 192, 0.7)  /* Silver-grey at the bottom */
+      );
+      pointer-events: none; // Ensures the overlay does not interfere with interactions
+    }
+  }
 }
 
-// Styling for main content
+// Main content
 .main-content {
+  flex-grow: 1;
+  position: relative;
+  z-index: 1; // Ensure it stays in front of .background-animation
   padding: 1rem;
-  width: 100%;
-  background-color: #e0e1e2;
+  background-color: rgba(255, 255, 255, 0); // Transparent background
 
   // Apply skew for leaning effect on larger screens
   @media (min-width: 992px) {
@@ -145,7 +169,7 @@ $sidebar-width: 300px;
   }
 }
 
-.custom-title{
+.custom-title {
   h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
     font-family: 'Roboto', sans-serif;
@@ -154,13 +178,14 @@ $sidebar-width: 300px;
   }
 }
 
-.custom-card{
-  border-top:#000 solid 8px;
+.custom-card {
+  border-top: #000 solid 8px;
   border-right: #000 solid 8px;
   border-bottom: #000 solid 20px;
   border-left: #000 solid 20px;
   background-color: $main-bg-color;
   color: #fff;
+  z-index: 20;
 }
 
 .custom-title h1,
@@ -201,7 +226,7 @@ $sidebar-width: 300px;
     padding: 20px;
     background: $main-bg-color;
     color: #ffffff;
-    border-top:#000 solid 8px;
+    border-top: #000 solid 8px;
     border-right: #000 solid 8px;
     border-bottom: #000 solid 20px;
     border-left: #000 solid 20px;
