--- a/frontend/src/App.scss
+++ b/frontend/src/App.scss
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@0,300;0,400;1,300;1,400&display=swap');
+
 // Universal styles for all elements
 *,
 *::before,
@@ -9,6 +12,7 @@
 // Body styling
 html, body, #root, .App {
   height: 100%;
+  
 }
 
 body {
@@ -16,7 +20,11 @@ body {
   -webkit-font-smoothing: antialiased;
   background-color: #e0e1e2;
   color: #333;
-  overflow-x: hidden; // Prevent unwanted horizontal scrolling
+  overflow-x: hidden;
+}
+
+li {
+  margin-top: 0.5rem;
 }
 
 // Media elements
@@ -58,10 +66,11 @@ h6 {
   overflow-wrap: break-word;
   margin: 0;
   color: inherit;
+  font-family: 'Roboto', sans-serif;
 }
 
 $main-bg-color: #ae8efd;
-$sidebar-width: 300px;
+$sidebar-width: 320px;
 
 // Animation for main content to slide in and unblur
 @keyframes easeInFromLeft {
@@ -87,6 +96,11 @@ $sidebar-width: 300px;
   }
 }
 
+.animate {
+  animation: easeInFromLeft 1s ease-in-out forwards;
+}
+
+
 // Main app layout adjustments
 .App {
   display: flex;
@@ -100,12 +114,12 @@ $sidebar-width: 300px;
     top: 0;
     left: 0;
     width: 100vw;
-    height: calc(100vh - 64px); // Height up to just above the footer
-    z-index: -1; // Place it behind everything else
+    height: calc(100vh - 64px);
+    z-index: 1; 
     background-repeat: repeat-y;
-    background-size: auto 100vh; // Fit the SVG vertically across the full viewport height
+    background-size: auto 100vh; 
     animation: scrollToRight 8s linear infinite;
-    opacity: 0.5; // Adjust opacity if needed
+    opacity: 0.5; 
 
     // Gradient Overlay
     &::after {
@@ -130,15 +144,20 @@ $sidebar-width: 300px;
 .main-content {
   flex-grow: 1;
   position: relative;
-  z-index: 1; // Ensure it stays in front of .background-animation
+  z-index: 1;
   padding: 1rem;
-  background-color: rgba(255, 255, 255, 0); // Transparent background
+  background-color: rgba(255, 255, 255, 0);
+
+    // Hide scrollbar on WebKit browsers (Chrome, Safari)
+    &::-webkit-scrollbar {
+      display: none;
+    }
+    scrollbar-width: none;
 
   // Apply skew for leaning effect on larger screens
   @media (min-width: 992px) {
     margin-left: $sidebar-width;
     width: calc(100% - #{$sidebar-width});
-    transform: skewX(-5deg); 
     transform-origin: top left;
     overflow-y: scroll;
     scroll-behavior: smooth;
@@ -172,19 +191,18 @@ $sidebar-width: 300px;
 .custom-title {
   h1, h2, h3, h4, h5, h6 {
     font-weight: bold;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'Roboto', sans-serif !important;
     font-size: 40rem;
     padding: 0.5rem;
   }
 }
 
 .custom-card {
-  border-top: #000 solid 8px;
-  border-right: #000 solid 8px;
-  border-bottom: #000 solid 20px;
-  border-left: #000 solid 20px;
   background-color: $main-bg-color;
   color: #fff;
+  box-shadow: 12px 12px 2px 1px rgba(162, 128, 248, 0.5);
+  min-height: 8rem;
+  justify-content: center;
   z-index: 20;
 }
 
@@ -211,6 +229,7 @@ $sidebar-width: 300px;
   align-items: center;
   background: rgba(255, 255, 255, 0);
   backdrop-filter: blur(25px);
+  transform: none;
   z-index: 1050;
   overflow: hidden;
 
@@ -218,27 +237,27 @@ $sidebar-width: 300px;
     margin: 0;
     display: flex;
     align-items: center;
+    transform: skew(-5deg);
   }
 
   .custom-modal-content {
     max-width: 500px;
-    width: calc(100% - 40px); // Adds responsiveness
+    width: calc(100% - 40px);
     padding: 20px;
-    background: $main-bg-color;
-    color: #ffffff;
-    border-top: #000 solid 8px;
-    border-right: #000 solid 8px;
-    border-bottom: #000 solid 20px;
-    border-left: #000 solid 20px;
+    background-color: $main-bg-color;
+    color: #fff;
+    box-shadow: 12px 12px 2px 1px rgba(162, 128, 248, 0.5);
+    min-height: 8rem;
+    z-index: 20;
     border-radius: 8px;
     box-shadow: 0 2px 10px rgba(0, 0, 0, 0.3);
     text-align: center;
-  }
+    }
 }
 
 // Button styling within custom modals
 .custom-modal .custom-modal-content button {
-  margin: 5px;
+  margin-top : 1rem;
 }
 
 // Custom Modal Header Styling
@@ -344,4 +363,5 @@ $sidebar-width: 300px;
     max-width: 90%;
     padding: 20px;
   }
+
 }
