--- a/frontend/src/styles/userDashboard.scss
+++ b/frontend/src/styles/userDashboard.scss
@@ -1,3 +1,18 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&display=swap');
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  overflow-wrap: break-word;
+  margin: 0;
+  color: inherit;
+  font-family: 'Roboto', sans-serif;
+}
+
+
 .file-upload-section{
     border-radius: 5px;
     padding: 1rem;
@@ -8,7 +23,7 @@
 }
 
 .file-item {
-    margin-bottom: 1.5rem;
+    margin-bottom: 1rem;
     padding: 1rem;
     border: 1px solid #ddd;
     border-radius: 5px;
@@ -26,8 +41,8 @@
         .version-item {
             margin-top: 0.5rem;
             padding: 0.5rem;
-            background-color: #000;
-            color: #fff;
+            background-color: #f0f0f0;
+            color: #000;
             border-radius: 0.5rem;
 
             p {
@@ -35,6 +50,11 @@
             }
         }
     }
+}
+
+.user-profile-section {
+    margin-top: 3rem;
+    margin-bottom: 6rem;
 }
 
 .custom-modal .custom-modal-content .modal-body canvas {
